--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/values/strings.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   -->
 <resources>
     <string name="app_name">Github Query</string>
+    <string name="Test">Your search URL will show up here when you click search</string>
 </resources>
